--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,14 +9,65 @@
         <servlet-name>ServletAdaptor</servlet-name>
         <url-pattern>/rest/*</url-pattern>
     </servlet-mapping>
-    <session-config>
-        <session-timeout>
-            30
-        </session-timeout>
-    </session-config>
     
-<!--    <persistence-context-ref>
-        <persistence-context-ref-name>jdbc/backendDB</persistence-context-ref-name>
-        <persistence-unit-name>jdbc/backendDB</persistence-unit-name>
-    </persistence-context-ref>-->
+    <listener>
+        <listener-class>com.nttdata.masterthesis.javabackend.listener.EventListener</listener-class>
+    </listener>
+    
+    <login-config>
+        <auth-method>BASIC</auth-method>
+        <realm-name>userMgmtJdbcRealm</realm-name>
+<!--        <form-login-config>
+          <form-login-page>/index.jsp</form-login-page>
+          <form-error-page>/login.jsp?auth-error=1</form-error-page>
+        </form-login-config>--> 
+    </login-config>
+    
+    <security-constraint>
+  
+        <!-- everything below /secure/* and /services/secure/* requires authentication -->
+        <web-resource-collection>
+          <web-resource-name>Secured Content</web-resource-name>
+          <url-pattern>/secure/*</url-pattern>
+          <url-pattern>/rest/secure/*</url-pattern>
+          <url-pattern>/services/secure/*</url-pattern>
+        </web-resource-collection>
+
+        <!-- only users with at least one of these roles are allowed to access the secured content -->
+        <auth-constraint>
+          <role-name>ADMINISTRATOR</role-name>
+          <role-name>USER</role-name>
+        </auth-constraint>
+
+        <!-- we always want https! -->
+<!--        <user-data-constraint>
+          <description>highest supported transport security level</description>
+          <transport-guarantee>CONFIDENTIAL</transport-guarantee>
+        </user-data-constraint>-->
+  
+  </security-constraint>
+  
+  <!-- declare the roles relevant for our webapp -->
+  <security-role>
+    <role-name>ADMINISTRATOR</role-name>
+  </security-role>
+  <security-role>
+    <role-name>USER</role-name>
+  </security-role>
+  <security-role>
+    <role-name>DEFAULT</role-name>
+  </security-role>
+   
+  <session-config>
+    <!-- on productive systems you might have another value for the timeout -->
+    <session-timeout>5</session-timeout>
+    <!-- 
+       we don't want to use the default name JSESSIONID because this 
+       tells everyone (especially hackers) that our application is based on java 
+    -->
+    <cookie-config>
+      <name>SESSIONID</name>
+    </cookie-config>
+  </session-config>
+    
 </web-app>
