--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,13 @@
             <artifactId>commons-codec</artifactId>
             <version>1.6</version>
         </dependency>
+        
+        <!-- Logging -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.0.6</version>
+        </dependency>
 
         
     </dependencies>
