--- a/src/main/resources/backend.template.properties
+++ b/src/main/resources/backend.template.properties
@@ -1,2 +1,12 @@
+############################################################################################
+##                                                                                        ##
+## README                                                                                 ##
+## ======                                                                                 ##
+## cp src/main/resources/backend.template.properties ${user.home}/backend.properties      ##
+## Insert your individual Settings in ${user.home}/backend.properties                     ##
+## Example Path ${user.home}: "C:\Users\MATHAF"                                           ##
+##                                                                                        ##
+############################################################################################
+
 #GOOGLE API KEY
 com.nttdata.masterthesis.javabackend.googleapi.key=
