added junit test for rest api

--- a/src/main/resources/backend.template.properties
+++ b/src/main/resources/backend.template.properties
@@ -10,3 +10,14 @@
 
 #GOOGLE API KEY
 com.nttdata.masterthesis.javabackend.googleapi.key=
+
+# CN-NAME (SSL-Zertifikat)
+com.nttdata.masterthesis.javabackend.cnName=
+
+
+
+### JUNIT Tests
+# Test user username
+com.nttdata.masterthesis.javabackend.tests.user1.name=
+# Test user1 password
+com.nttdata.masterthesis.javabackend.tests.user1.password=
