--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
             <version>2.0.0</version>
         </dependency>
         
+        <dependency>
+          <groupId>com.fasterxml.jackson.jaxrs</groupId>
+          <artifactId>jackson-jaxrs-json-provider</artifactId>
+          <version>2.1.1</version>
+        </dependency>
+               
         <!-- Hibernate dependencies -->
         <dependency>
             <groupId>org.hibernate</groupId>
