--- a/src/main/resources/backend.template.properties
+++ b/src/main/resources/backend.template.properties
@@ -14,7 +14,11 @@ com.nttdata.masterthesis.javabackend.googleapi.key=
 # CN-NAME (SSL-Zertifikat)
 com.nttdata.masterthesis.javabackend.cnName=
 
-
+### Twitter API Config
+com.nttdata.masterthesis.javabackend.accessToken=
+com.nttdata.masterthesis.javabackend.accessTokenSecure=
+com.nttdata.masterthesis.javabackend.customerKey=
+com.nttdata.masterthesis.javabackend.customerKeySecure=
 
 ### JUNIT Tests
 # Test user username
