added YouTube Manager, + checkstyle config

--- a/src/main/resources/backend.template.properties
+++ b/src/main/resources/backend.template.properties
@@ -8,8 +8,15 @@
 ##                                                                                        ##
 ############################################################################################
 
+### Application Root URL:
+com.nttdata.masterthesis.javabackend.applicationRootUrl=
+
 #GOOGLE API KEY
 com.nttdata.masterthesis.javabackend.googleapi.key=
+### Google DEV Key
+com.nttdata.masterthesis.javabackend.googleapi.dev.key=
+### Google DEV App-Name
+com.nttdata.masterthesis.javabackend.googleapi.dev.appName=
 
 # CN-NAME (SSL-Zertifikat)
 com.nttdata.masterthesis.javabackend.cnName=
@@ -19,6 +26,7 @@ com.nttdata.masterthesis.javabackend.accessToken=
 com.nttdata.masterthesis.javabackend.accessTokenSecure=
 com.nttdata.masterthesis.javabackend.customerKey=
 com.nttdata.masterthesis.javabackend.customerKeySecure=
+
 
 ### JUNIT Tests
 # Test user username
