--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
             <version>6.0</version>
             <scope>provided</scope>
         </dependency>
-        
+
         <dependency>
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-server</artifactId>
@@ -56,47 +56,47 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.0.0</version>
         </dependency>
-        
+
         <dependency>
           <groupId>com.fasterxml.jackson.jaxrs</groupId>
           <artifactId>jackson-jaxrs-json-provider</artifactId>
           <version>2.1.1</version>
         </dependency>
-               
+
         <!-- Hibernate dependencies -->
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>4.1.6.Final</version>
         </dependency>
-        
-        
+
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.21</version>
             <scope>provided</scope>
         </dependency>
-        
+
         <!-- Apache Commons -->
         <dependency>
             <groupId>commons-configuration</groupId>
             <artifactId>commons-configuration</artifactId>
             <version>1.8</version>
         </dependency>
-        
+
         <dependency>
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils-core</artifactId>
             <version>1.8.3</version>
         </dependency>
-        
+
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
             <version>1.6</version>
         </dependency>
-        
+
         <!-- Logging -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
@@ -110,34 +110,61 @@
             <version>1.6.6</version>
             <scope>provided</scope>
         </dependency>
-        
+
         <!-- paypal dependencies -->
         <dependency>
              <groupId>com.paypal</groupId>
              <artifactId>merchant-java-sdk</artifactId>
              <version>1.2.95</version>
         </dependency>
-      
+
         <dependency>
              <groupId>com.paypal.sdk</groupId>
              <artifactId>paypal-auth-signature</artifactId>
              <version>1.0</version>
         </dependency>
-        
+
         <!-- twitter dependencies -->
         <dependency>
             <groupId>org.twitter4j</groupId>
             <artifactId>twitter4j-core</artifactId>
             <version>2.2.6</version>
         </dependency>
-        
+
+        <!-- gdata youtube dependencies -->
+        <dependency>
+            <groupId>com.google.gdata</groupId>
+            <artifactId>gdata-client</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.gdata</groupId>
+            <artifactId>gdata-youtube</artifactId>
+            <version>2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.gdata</groupId>
+            <artifactId>gdata-core</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.gdata</groupId>
+            <artifactId>gdata-media</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>13.0.1</version>
+        </dependency>
+
         <!-- Date / Time Library -->
         <dependency>
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
             <version>2.1</version>
         </dependency>
-        
+
         <!-- cross origin -->
         <dependency>
             <groupId>org.eclipse.jetty</groupId>
@@ -145,7 +172,7 @@
             <version>7.6.7.v20120910</version>
         </dependency>
 
-        
+
     </dependencies>
 
     <build>
@@ -216,7 +243,7 @@
                   </execution>
                 </executions>
               </plugin>
-              
+
               <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
@@ -226,10 +253,20 @@
                     <nohelp>true</nohelp>
                 </configuration>
               </plugin>
-              
+
+              <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.2</version>
+                <configuration>
+                    <locales>de</locales>
+                </configuration>
+              </plugin>
+
         </plugins>
+
     </build>
-    
+
     <repositories>
         <repository>
             <id>jboss</id>
@@ -242,18 +279,20 @@
             <name>Repository for library EclipseLink (JPA 2.0)</name>
         </repository>
     </repositories>
-    
-    
-    <reporting>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-checkstyle-plugin</artifactId>
-                <configuration>
-                    <configLocation>config/sun_checks.xml</configLocation>
-                </configuration>
-            </plugin>
-        </plugins>
-    </reporting>
-    
+
+<reporting>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-checkstyle-plugin</artifactId>
+            <version>2.9.1</version>
+            <configuration>
+              <configLocation>config/sun_checks.xml</configLocation>
+            </configuration>
+        </plugin>
+
+    </plugins>
+</reporting>
+
+
 </project>
