--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,20 @@
         <glassfish.embedded-static-shell.jar>C:\dev\server\glassfish\glassfish\lib\embedded\glassfish-embedded-static-shell.jar</glassfish.embedded-static-shell.jar>
     </properties>
 
+    <developers>
+        <developer>
+            <name>Franz Mathauser</name>
+            <organization>NTT DATA Germany</organization>
+            <organizationUrl>http://emea.nttdata.com</organizationUrl>
+            <email>franz.mathauser@nttdata.com</email>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git://github.com/franzmathauser/javabackend.git</connection>
+        <url>scm:git:git://github.com/franzmathauser/javabackend.git</url>
+    </scm>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -244,7 +258,7 @@
                 </executions>
               </plugin>
 
-              <plugin>
+<!--              <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.9</version>
@@ -252,7 +266,25 @@
                     <show>private</show>
                     <nohelp>true</nohelp>
                 </configuration>
-              </plugin>
+              </plugin>-->
+
+              <plugin>
+                    <groupId>org.codehaus.enunciate</groupId>
+                        <artifactId>maven-enunciate-plugin</artifactId>
+                        <version>1.26</version>
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>docs</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <!-- the directory where to put the docs -->
+                            <docsDir>${project.build.directory}/docs</docsDir>
+                            <configFile>enunciate.xml</configFile>
+                        </configuration>
+                </plugin>
 
               <plugin>
               <groupId>org.apache.maven.plugins</groupId>
@@ -260,6 +292,97 @@
                 <version>3.2</version>
                 <configuration>
                     <locales>de</locales>
+
+                    <reportPlugins>
+                      <plugin>
+                          <groupId>org.apache.maven.plugins</groupId>
+                          <artifactId>maven-project-info-reports-plugin</artifactId>
+                          <version>2.4</version>
+                        </plugin>
+                        <plugin>
+                          <artifactId>maven-changelog-plugin</artifactId>
+                        </plugin>
+                        <plugin>
+                          <artifactId>maven-checkstyle-plugin</artifactId>
+                          <version>2.6</version>
+                          <configuration>
+                            <configLocation>sun_checks.xml</configLocation>
+                            <includeTestSourceDirectory>true</includeTestSourceDirectory>
+                            <excludes>**/generated/*.java</excludes>
+                          </configuration>
+                        </plugin>
+                        <plugin>
+                          <artifactId>maven-dependency-plugin</artifactId>
+                          <version>2.2</version>
+                          <configuration>
+                            <repositoryUrl>--</repositoryUrl>
+                            <artifactItems />
+                          </configuration>
+                        </plugin>
+                        <plugin>
+                          <artifactId>maven-javadoc-plugin</artifactId>
+                          <version>2.8</version>
+                        </plugin>
+                        <plugin>
+                          <artifactId>maven-jxr-plugin</artifactId>
+                          <version>2.2</version>
+                        </plugin>
+                        <plugin>
+                          <artifactId>maven-pmd-plugin</artifactId>
+                          <version>2.5</version>
+                          <configuration>
+                            <targetJdk>1.6</targetJdk>
+                            <format>xml</format>
+                            <linkXref>true</linkXref>
+                            <sourceEncoding>ISO-8859-1</sourceEncoding>
+                            <minimumTokens>100</minimumTokens>
+                            <excludes>
+                              <exclude>**/generated/*.java</exclude>
+                            </excludes>
+                          </configuration>
+                        </plugin>
+                        <plugin>
+                          <artifactId>maven-surefire-report-plugin</artifactId>
+                          <version>2.8.1</version>
+                          <configuration>
+                            <!-- Bei grossen Projekten auf false setzen: -->
+                            <showSuccess>true</showSuccess>
+                          </configuration>
+                        </plugin>
+                        <plugin>
+                          <groupId>org.codehaus.mojo</groupId>
+                          <artifactId>cobertura-maven-plugin</artifactId>
+                          <version>2.5.1</version>
+                        </plugin>
+                        <plugin>
+                          <groupId>org.codehaus.mojo</groupId>
+                          <artifactId>emma-maven-plugin</artifactId>
+                          <version>1.0-alpha-3</version>
+                        </plugin>
+                        <plugin>
+                          <groupId>org.codehaus.mojo</groupId>
+                          <artifactId>findbugs-maven-plugin</artifactId>
+                          <version>2.3.2</version>
+                        </plugin>
+                        <plugin>
+                          <groupId>org.codehaus.mojo</groupId>
+                          <artifactId>taglist-maven-plugin</artifactId>
+                          <version>2.4</version>
+                          <configuration>
+                            <tags>
+                              <tag>fixme</tag>
+                              <tag>FixMe</tag>
+                              <tag>FIXME</tag>
+                              <tag>@todo</tag>
+                              <tag>todo</tag>
+                              <tag>TODO</tag>
+                              <tag>xxx</tag>
+                              <tag>@deprecated</tag>
+                            </tags>
+                          </configuration>
+                        </plugin>
+                      </reportPlugins>
+
                 </configuration>
               </plugin>
 
@@ -268,10 +391,11 @@
     </build>
 
     <repositories>
-        <repository>
+        <!--<repository>
             <id>jboss</id>
             <url>http://repository.jboss.org/maven2</url>
         </repository>
+        -->
         <repository>
             <url>http://download.eclipse.org/rt/eclipselink/maven.repo/</url>
             <id>eclipselink</id>
@@ -280,19 +404,7 @@
         </repository>
     </repositories>
 
-<reporting>
-    <plugins>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-checkstyle-plugin</artifactId>
-            <version>2.9.1</version>
-            <configuration>
-              <configLocation>config/sun_checks.xml</configLocation>
-            </configuration>
-        </plugin>
 
-    </plugins>
-</reporting>
 
 
 </project>
