--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,18 @@
         </developer>
     </developers>
 
+    <description>
+        Im JavaBackend wird die Businesslogik der Anwendung bereitgestellt.
+        Das Backend bindet externe Webservices und eine Datenbank an und ermöglicht
+        die Schnittstelle zu einem Client über RESTful-WebService mit
+        Java Enterprise-Technologien.
+    </description>
+
+    <issueManagement>
+        <system>Github Issues</system>
+        <url>https://github.com/franzmathauser/javabackend/issues</url>
+    </issueManagement>
+
     <scm>
         <connection>scm:git:git://github.com/franzmathauser/javabackend.git</connection>
         <url>scm:git:git://github.com/franzmathauser/javabackend.git</url>
@@ -140,10 +152,17 @@
 
         <!-- twitter dependencies -->
         <dependency>
+           <groupId>org.twitter4j</groupId>
+           <artifactId>twitter4j-core</artifactId>
+           <version>[3.0,)</version>
+       </dependency>
+        <!--
+        <dependency>
             <groupId>org.twitter4j</groupId>
             <artifactId>twitter4j-core</artifactId>
             <version>2.2.6</version>
         </dependency>
+        -->
 
         <!-- gdata youtube dependencies -->
         <dependency>
@@ -236,6 +255,7 @@
                     </execution>
                 </executions>
             </plugin>
+            <!--
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>axistools-maven-plugin</artifactId>
@@ -257,6 +277,7 @@
                   </execution>
                 </executions>
               </plugin>
+              -->
 
 <!--              <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -279,8 +300,30 @@
                       <plugin>
                           <groupId>org.apache.maven.plugins</groupId>
                           <artifactId>maven-project-info-reports-plugin</artifactId>
-                          <version>2.4</version>
-                        </plugin>
+                          <version>2.6</version>
+                          <configuration>
+                            <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
+                            <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
+                          </configuration>
+                          <!-- simpler configuration without reportSets available for usual cases -->
+                          <reports>
+                            <report>help</report>
+                            <report>index</report>
+                            <report>project-team</report>
+                            <!--<report>cim</report>-->
+                            <report>dependencies</report>
+                            <report>dependency-convergence</report>
+                            <report>dependency-info</report>
+                            <report>dependency-management</report>
+                            <!--<report>distribution-management</report>-->
+                            <report>scm</report>
+                            <report>issue-tracking</report>
+                            <report>modules</report>
+                            <report>plugin-management</report>
+                            <report>plugins</report>
+                            <report>summary</report>
+                          </reports>
+                      </plugin>
                         <plugin>
                           <artifactId>maven-changelog-plugin</artifactId>
                         </plugin>
@@ -305,10 +348,12 @@
                           <artifactId>maven-javadoc-plugin</artifactId>
                           <version>2.8</version>
                         </plugin>
+                        <!--
                         <plugin>
                           <artifactId>maven-jxr-plugin</artifactId>
                           <version>2.2</version>
                         </plugin>
+                        -->
                         <plugin>
                           <artifactId>maven-pmd-plugin</artifactId>
                           <version>2.5</version>
@@ -331,6 +376,7 @@
                             <showSuccess>true</showSuccess>
                           </configuration>
                         </plugin>
+                        <!--
                         <plugin>
                           <groupId>org.codehaus.mojo</groupId>
                           <artifactId>cobertura-maven-plugin</artifactId>
@@ -356,11 +402,13 @@
                           <artifactId>emma-maven-plugin</artifactId>
                           <version>1.0-alpha-3</version>
                         </plugin>
+
                         <plugin>
                           <groupId>org.codehaus.mojo</groupId>
                           <artifactId>findbugs-maven-plugin</artifactId>
                           <version>2.3.2</version>
                         </plugin>
+                        -->
                         <plugin>
                           <groupId>org.codehaus.mojo</groupId>
                           <artifactId>taglist-maven-plugin</artifactId>
